Release 4.13
	- added spreadsheet-style formulas calculated from a row's
	  contents
	- update add-column filter to support formula substitutions
	- improve error reporting for private HDX resources

2018-12-03 Release 4.12
	- added concat() aggregator for CountFilter
	- added data_hash and columns_hash properties for
	  hxl.model.Dataset, together with hxlhash command-line script
	- fixed parsing of YYYY-MM-DD hh:mm:ss SQL dates
	- support opening zipped CSV files (thanks to Orest Dubay)

2018-08-31 Release 4.11
	- fixed date-cleaning bug when reading a filter definition from
	  JSON
	- added an option to send custom HTTP headers with a request for a
	  remote HXL file (e.g. a custom user agent)

2018-07-31 Release 4.10
	- refine delimiter detection for CSV
	- added append_external_list() method (and filter support) for an
	  external list of files to append
	- count filter now supports dates and strings for min() and max()
	  aggregators
	- add dayfirst parameter to normalise_date() (defaults to True)
	- have CleanFilter prescan the dataset for date cleaning, and
	  default to dayfirst unless unambiguous MMDD format is more common

2018-06-29 Release 4.9
	- support additional separators besides comma for CSV-like files
	  (including tab, semicolon, colon, and vertical bar)
	- allow absolute tag patterns ending in "!" (does not ignore extra
	  attributes)
	- fix bug in ReplaceDataFilter that raised an error when the
	  replacement was empty/None

2018-06-14 Release 4.8.4
	- when reading JSON, flatten any non-scalar values into JSON
	  strings
	- add a filter for extracting values from JSON strings using JSONPath

2018-05-05 Release 4.8.3
	- handle Google Drive "open" and "file" URLs
	- normalise whitespace for the count filter (so that "Guinea" and
	  "Guinea " won't count separately)
	- fix validation test for trailing whitespace

2018-05-31 Releases 4.8.1, 4.8.2
	- hotfixes for installation problem with 4.8 (in a clean install)

2018-05-31 Release 4.8