@@ -3,6 +3,7 @@ Release 4.13
 	  contents
 	- update add-column filter to support formula substitutions
 	- improve error reporting for private HDX resources
+	- fix bug with is min/is max aggregator and mixed datatypes
 
 2018-12-03 Release 4.12
 	- added concat() aggregator for CountFilter
